# MatchBench

./: README.md
Algorithms/: CMakeLists.txt  ReadMe.txt  RunGMS.m  RunOpencvMatchers.m  RunOpencvRansacs.m  RunTimeReporter.m  RunUSAC.m  RunUSAC_TIME.m
Algorithms/USAC/: fundmatrix.cfg
Algorithms/src/: gms_matcher.cpp  opencv_matchers.cpp  opencv_ransac.cpp  time_reporter.cpp  time_reporter_gpu.cpp  usac_matcher.cpp  usac_matcher_time.cpp
Dataset/: ReadMe.txt
Evaluation/: EvaluateMatchers.m  PlotPort1.m  PlotPort2.m  PlotSingleDataset.m  ProduceTable_SP.m  ReadMe.txt
Evaluation/Tables/: sp_table.txt
Results/01-office/: akaze.txt  binboost.txt  daisy.txt  dlco.txt  freak.txt  gms.txt  harris_laplace.txt  latch.txt  lmeds_em.txt  lmeds_fm.txt  msd.txt  ransac_fm.txt  star.txt  surf.txt  usac_fm.txt
Results/02-teddy/: binboost.txt  daisy.txt  dlco.txt  freak.txt  gms.txt  harris_laplace.txt  latch.txt  lmeds_em.txt  lmeds_fm.txt  msd.txt  ransac_fm.txt  star.txt  usac_fm.txt
Results/03-large-cabinet/: binboost.txt  daisy.txt  dlco.txt  freak.txt  gms.txt  harris_laplace.txt  latch.txt  lmeds_em.txt  lmeds_fm.txt  msd.txt  ransac_fm.txt  star.txt  usac_fm.txt
Results/04-kitti/: binboost.txt  daisy.txt  dlco.txt  freak.txt  gms.txt  harris_laplace.txt  latch.txt  lmeds_em.txt  lmeds_fm.txt  msd.txt  ransac_fm.txt  star.txt  usac_fm.txt
Results/05-castle/: binboost.txt  daisy.txt  dlco.txt  freak.txt  gms.txt  gms_s.txt  harris_laplace.txt  latch.txt  lmeds_em.txt  lmeds_fm.txt  msd.txt  ransac_fm.txt  star.txt  usac_fm.txt
Results/06-office-wide/: binboost.txt  daisy.txt  dlco.txt  freak.txt  gms.txt  gms_s.txt  harris_laplace.txt  latch.txt  lmeds_em.txt  lmeds_fm.txt  msd.txt  ransac_fm.txt  star.txt  usac_fm.txt
Results/07-teddy-wide/: binboost.txt  daisy.txt  dlco.txt  freak.txt  gms.txt  (+9 more)
Tools/: CMakeLists.txt  ConstructDatasetfromKITTI.cpp  ConstructDatasetfromTUM.cpp  DownsampleTUM.cpp
(+14 files in other folders)
